objects/pymt__Category_Split__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Used to allocate portions of PaymentConnect Payments to a Category.</description>
    <fields>
        <fullName>pymt__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Portion of the related payment to allocate to the selected Category.</description>
        <inlineHelpText>Portion of the related payment to allocate to the selected Category.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Assigned_To_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked by a trigger when the Category lookup field has a value.  Used to determine whether or not split should be included in a rollup.</inlineHelpText>
        <label>Assigned to Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>pymt__Category__c</referenceTo>
        <relationshipLabel>Category Splits</relationshipLabel>
        <relationshipName>Category_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Memo__c</fullName>
        <description>Category Split Memo</description>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Date__c</fullName>
        <formula>pymt__Payment__r.pymt__Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Status__c</fullName>
        <formula>TEXT(pymt__Payment__r.pymt__Status__c)</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Category Splits</relationshipLabel>
        <relationshipName>Category_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Category Split</label>
    <nameField>
        <displayFormat>SPL{00000}</displayFormat>
        <label>Category Split ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>